[package]
name = "ldap3_wasm"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
tracing-subscriber = "0.3.17"
wasm-bindgen = {version = "0.2.87", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
ldap3_proto = { workspace = true, features = ["serde"] }
serde-wasm-bindgen = "0.6.1"
ws_stream_wasm = {path = "C:\\Users\\jou\\code\\ws_stream_wasm"}
async_io_stream = { version = "0.3.3", features = ["tokio", "tokio_io"] }
framed = "0.4.3"
# tokio-util = "0.7.10"
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio = { workspace = true, features = ["io-util"] }
futures-util = "0.3.29"
serde.workspace = true
wasm-bindgen-test = "0.3.38"
reqwest = { version = "0.11.22" }
serde_json.workspace = true
tracing.workspace = true
tracing-wasm = "0.2.1"
